2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-03-02  Dan T. Murphy  <dtmurphy@acm.org>

	* file-types-properties.glade: Added use_filechooser=true
	property to GnomeFileEntry widgets to make use of new file
	selector. Fixes bug #135791.

2004-02-19  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* file-types-capplet.c (remove_cb): Added warning dialog to prompt
	the user before an entry is deleted permanently. (Release team's 
	approval taken regarding the string addition).
	Fix bug #109091.

2004-02-16  Padraig O'Briain <padraig.obriain@sun.com>

	* file-types-properties.glade: Remove unnecessary setting of ATK 
	relations. The module gail will ensure that the labels are set
	correctly. Set mnemonic widget to be a GnomeFileEntry instead of 
	a GtkEntry in the combo box. Fixes bug #134131.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-10  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c : rework to match nautilus and use icon themes
	  somewhat.  There is some serious cruft left in here.

2004-02-04  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_class_init) : do not call these
	  construct only properties so that the info can change later.

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* file-types-capplet.c: (cb_file_type_dialog_response): Update help
	link to point to user-guide.xml

2004-02-10  Kjartan Maraas  <kmaraas@gnome.org>

	* mime-edit-dialog.c: (mime_edit_dialog_get_app), (validate_data):
	Fix some typos.

2004-02-08  Kjartan Maraas  <kmaraas@gnome.org>

	* mime-edit-dialog.c: (validate_data): Remove extra
	full stop. Closes bug #132563.

2004-02-08  Kjartan Maraas <kmaraas@gnome.org>
