@@ -1,3 +1,9 @@
+2004-19-05  Muktha  <muktha.narayan@wipro.com>
+
+	* mime-type-info.c (get_icon_pixbuf): Avoid recursive call of this
+	function when the icon file is not found. Fixes file-types capplet
+	hang. Bug #142894.
+
 2004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
